<resources>
    <string name="app_name">PMDM-2022</string>
    <string name="title">Ut01Ex02</string>
    <string name="title_ex02b">Titulo: Ut01Ex02B</string>
    <string name="description_ex02b">Descripcion: bseeeeeeeeeyvbisubsubvuebsuvbksbevusbuseubgvskunvkjbsevusbfkvnsbuebskbvhsbdvhbsukvbe</string>
    <string name="date">30/09/2022</string>
    <string name="content">ajvbeusbusbvjsbvsuebvsukebvskujsjdjksbvsjbvhsebvhjsbvkshdbvhsdvhsdvdsgbhrnhsrhnrndssrahhtshshthrth</string>
    <string name="ut01_ex03">PMDM</string>
    <string name="ut01_ex03_text">Ut01Ex03</string>
    <string name="disponible">3 disponible(s)</string>
    <string name="price">2,99€</string>
    <string name="distance">4,1km</string>
    <string name="rating">2,7</string>
    <string name="info">Recogida hoy: 00:14-23:59</string>
    <string name="text_title">Pack sorpresa</string>
    <string name="product_title">Nombre del establecimientoooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo</string>

    <!--Form-->
    <string name="form_label_name">Nombre:</string>
    <string name="form_label_surname">Apellido:</string>
    <string name="form_label_save">Guardar</string>
</resources>