<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ut01.ex04.presentation.Ut01Ex04Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:background="@drawable/ic_launcher_background">
        
        <TextView
            android:id="@+id/disponible"
            android:textColor="@color/black"
            android:layout_margin="@dimen/image_margin"
            android:background="@color/orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disponible"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/heart"
            android:tint="@color/white"
            android:layout_margin="@dimen/image_margin"
            android:scaleType="centerCrop"
            android:background="@color/weak_black"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/empty_heart"
            android:layout_alignParentEnd="true"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo"
            android:background="@color/white"
            android:scaleType="centerCrop"
            android:layout_margin="@dimen/image_margin"
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            app:srcCompat="@drawable/ic_wings"
            android:layout_alignParentBottom="true"/>
        <TextView
            android:id="@+id/title"
            android:maxLines="2"
            android:ellipsize="end"
            android:layout_width="@dimen/text_width"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="bottom"
            android:textAlignment="gravity"
            android:textSize="@dimen/text_size"
            android:text="@string/product_title"
            android:layout_below="@+id/heart"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <TextView
            android:id="@+id/text_title"
            android:layout_margin="@dimen/image_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_title"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/info"
            android:layout_margin="@dimen/image_margin"
            android:text="@string/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_title"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/star_rate"
            android:layout_margin="@dimen/image_margin"
            android:layout_width="@dimen/star_size"
            android:layout_height="@dimen/star_size"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/empty_star"
            android:tint="@color/white"
            android:background="@color/orange"
            android:layout_alignParentBottom="true"/>
        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/image_margin"
            android:text="@string/rating"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_toEndOf="@+id/star_rate"
            android:layout_alignParentBottom="true"/>

        <TextView
            android:id="@+id/distance"
            android:layout_margin="@dimen/image_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/distance"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@id/text_title"/>
        <TextView
            android:id="@+id/price"
            android:layout_margin="@dimen/image_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/dark_green"
            android:text="@string/price"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

</LinearLayout>