<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ut01.ex02.presentation.Ut01Ex02Activity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/size_image"
        android:layout_height="@dimen/size_image"
        android:scaleType="centerCrop"
        android:tint="@color/purple_200"
        app:srcCompat="@drawable/ic_wings"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_image"
        android:orientation="vertical">

        <TextView
            android:text="@string/date"
            android:layout_width="@dimen/size_image"
            android:layout_height="@dimen/date"/>

        <TextView
            android:text="@string/title"
            android:maxLines="1"
            android:textSize="@dimen/title_font_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/content"
            android:maxLines="2"
            android:ellipsize="end"
            android:layout_width="@dimen/size_image"
            android:layout_height="@dimen/content"/>

    </LinearLayout>

</LinearLayout>